--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ body {
     background-size: cover;
     grid-area: "canvas";
     margin: auto;
-    width: 1000;
-    height: 250;
+    width: 1500px;
+    height: 500px;
     border: 1px solid black;
 }
 
