[style.css] add styling to description

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
     text-align: center;
     font-size: 80px;
     color: red;
+    font-family: 'Syne Tactile', cursive;
 }
 
 #description {
