--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
     display: grid;
     background-color: white;
     background-image: url("background.png");
+    z-index: -1;
     background-size: cover;
     grid-area: "canvas";
     margin: auto;
