--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,18 @@ body {
     font-size: 30px;
     text-align: center;
 }
+
+#level {
+    grid-area: "level";
+    color: yellow;
+    font-size: 40px;
+    text-align: center;
+}
 #game-area {
     display: grid;
     background-color: white;
-    background-image: url("background.png");
+    background-image: url("background.png"); 
+    /* I think this needs to be changed so that the level will display???? */
     z-index: -10;
     background-size: cover;
     grid-area: "canvas";
