--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: black;
+    background-image: url("https://t4.ftcdn.net/jpg/02/59/16/13/360_F_259161342_v4msUyQaM5a6sn9TSeip6V6TShwAxBKj.jpg");
+    background-size: 100%;
     
 }
 #container {
