--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body {
     text-align: center;
 }
 
-@media (max-width: 3100) {
+@media (min-width: 1900) {
     #game-area {
         width: 1000px;
         height: 200px;
